--- a/templates/apps/api/card_list_api.html
+++ b/templates/apps/api/card_list_api.html
@@ -1,6 +1,6 @@
 <div class="col-12">
     {% for card in card_list %}
-        <a href="/">
+        <a href="card-detail.html?.html?id={{ card.id }}">
             <div class="card">
                 <div class="card__front card__part">
                     <img class="card__front-square card__square"
