--- a/templates/apps/api/user_index_api.html
+++ b/templates/apps/api/user_index_api.html
@@ -4,7 +4,7 @@
         <div class="card">
             <div class="card-header">
                 <div class="card-title">
-                    Sizin İçin En İyi Sağlığı Bulun
+                    Kartlarınız Güvende
                 </div>
             </div>
             <div class="card-body">
@@ -18,6 +18,7 @@
                     <div class="main-chat-msg-name">
                         <a href="#">
                             <h5 class="mb-1 text-dark fw-semibold">{{ request.user.get_full_name }}</h5>
+                            <small>Kartlarınızın üzerine tıklayarak değişiklikleri yapabilirsiniz.</small>
                         </a>
                     </div>
                 </div>
